# ReinschriftTodo

./: .gitignore  Cargo.toml  LICENSE  README.md  TodosDatenbank.md  build_flatpak.sh  generated-sources.json  me.dumke.Reinschrift.desktop  me.dumke.Reinschrift.metainfo.xml  me.dumke.Reinschrift.yml  me.dumke.ReinschriftTodo.desktop  me.dumke.ReinschriftTodo.metainfo.xml  me.dumke.ReinschriftTodo.yml  me.dumke.TodosExtension.yml  org.example.TodosExtension.yml  todos_extension.desktop
screenshots/: db_de.md  db_en.md  db_es.md  db_fr.md  db_ja.md  db_sv.md  generate_screenshots.sh
src/: data.rs  i18n.rs  main.rs  ui.rs
src/i18n/: de.json  en.json  es.json  fr.json  ja.json  sv.json
webapp/: app.py  docker-compose.example.yml  requirements.txt  translations.py
webapp/templates/: _search_results.html  _todo_list.html  edit.html  index.html  login.html
